--- a/apps.html
+++ b/apps.html
@@ -21,7 +21,7 @@
       <div class="image_container">
 
         <div class="image">
-          <img src="../Icons/Applications/App Store.png" alt="App Store">
+          <img src="Icons/Applications/App Store.png" alt="App Store">
         </div>
         <p>App Store</p>
       </div>
