--- a/apps.html
+++ b/apps.html
@@ -21,9 +21,50 @@
       <div class="image_container">
 
         <div class="image">
-          <img src="Icons/Applications/App Store.png" alt="App Store">
+          <img src="Icons/Applications/Aide-mémoire.png">
+          <p>Aide-mémoire</p>
         </div>
-        <p>App Store</p>
+
+        <div class="image">
+          <img src="Icons/Applications/Aperçu.png">
+          <p>Aperçu</p>
+        </div>
+
+        <div class="image">
+          <img src="Icons/Applications/App Store.png">
+          <p>App Store</p>
+        </div>
+
+        <div class="image">
+          <img src="Icons/Applications/Assistant Boot Camp.png">
+          <p>Assistant Boot Camp</p>
+        </div>
+
+        <div class="image">
+          <img src="Icons/Applications/Assistant migration.png">
+          <p>Assistant migration</p>
+        </div>
+
+        <div class="image">
+          <img src="Icons/Applications/Automator.png">
+          <p>Automator</p>
+        </div>
+
+        <div class="image">
+          <img src="Icons/Applications/Bourse.png">
+          <p>Bourse</p>
+        </div>
+
+        <div class="image">
+          <img src="Icons/Applications/Calculette.png">
+          <p>Calculette</p>
+        </div>
+
+        <div class="image">
+          <img src="Icons/Applications/Calendrier.png">
+          <p>Calendrier</p>
+        </div>
+
       </div>
 
     </div>
