Added more apps icons

--- a/apps.html
+++ b/apps.html
@@ -66,6 +66,61 @@
           <p>Calendrier</p>
         </div>
 
+        <div class="image">
+          <img src="Icons/Applications/Capture d'écran.png">
+          <p>Capture d'écran</p>
+        </div>
+
+        <div class="image">
+          <img src="Icons/Applications/Colorimètre numérique.png">
+          <p>Colorimètre numérique</p>
+        </div>
+
+        <div class="image">
+          <img src="Icons/Applications/Configuration audio et MIDI.png">
+          <p>Configuration audio et MIDI</p>
+        </div>
+
+        <div class="image">
+          <img src="Icons/Applications/Console.png">
+          <p>Console</p>
+        </div>
+
+        <div class="image">
+          <img src="Icons/Applications/Contacts.png">
+          <p>Contacts</p>
+        </div>
+
+        <div class="image">
+          <img src="Icons/Applications/Dashboard.png">
+          <p>Dashboard</p>
+        </div>
+
+        <div class="image">
+          <img src="Icons/Applications/Dictaphone.png">
+          <p>Dictaphone</p>
+        </div>
+
+        <div class="image">
+          <img src="Icons/Applications/Dictionnaire.png">
+          <p>Dictionnaire</p>
+        </div>
+
+        <div class="image">
+          <img src="Icons/Applications/Échange de fichiers Bluetooth.png">
+          <p>Échange de fichiers Bluetooth</p>
+        </div>
+
+        <div class="image">
+          <img src="Icons/Applications/Échecs.png">
+          <p>Échecs</p>
+        </div>
+
+        <div class="image">
+          <img src="Icons/Applications/Éditeur de script.png">
+          <p>Éditeur de script</p>
+        </div>
+
       </div>
 
     </div>
